lab1/Test/L1-A-6-8.output
Error Type B at Line 1
Error Type B at Line 4
Error Type B at Line 9
Error Type A at Line 10
Error Type B at Line 10
